# TerminalChat

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  client.h  main.cpp
server/: CMakeLists.txt  commandServer.h  main.cpp  server.cpp  server.h
